--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pycparser==2.19
+PyJWT==1.7.1
 pylint==2.3.1
 six==1.12.0
 typed-ast==1.3.1
