--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-asn1crypto==0.24.0
 astroid==2.2.5
-cffi==1.12.2
 Click==7.0
 colorama==0.4.1
-cryptography==2.6.1
 Flask==1.0.2
+gunicorn==19.9.0
 isort==4.3.15
 itsdangerous==1.1.0
 Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
-pycparser==2.19
 PyJWT==1.7.1
 pylint==2.3.1
 six==1.12.0
 typed-ast==1.3.1
-Werkzeug==0.14.1
+Werkzeug==0.15.0
 wrapt==1.11.1
