--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: python
 python:
   - "3.6"
+cache: pip
 install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - pytest --cov
-  - coverage
+  - nosetests --with-coverage --cover-tests
+  - coverage report
+
+after_success:
+  - coveralls 
