--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,9 @@
 [report]
 omit = 
-        epicMail-api/venv/*
-        */venv/*
-        */site-packages/nose/*
-        */__pycache__/*
-        *.pyc
-        */home/travis/virtualenv/*
-        */__init__.py 
-        run.py
+    */python?.?/*
+    */__pycache__/*
+    *.pyc
+    */venv/*
+    */home/travis/virtualenv/*
+    */usr/lib/python3/*
+    */__init__.py
